Bug 129074 - Skia: very light highlightning of selected icons on toolbar in Windows
Summary: Skia: very light highlightning of selected icons on toolbar in Windows
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: graphics stack (show other bugs)
Version:
(earliest affected)
7.0.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:6.5.0
Keywords:
Depends on:
Blocks: Skia
  Show dependency treegraph
 
Reported: 2019-11-28 08:19 UTC by Roman Kuznetsov
Modified: 2019-12-15 18:05 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
Screenshot with comparison (37.95 KB, image/png)
2019-11-28 08:20 UTC, Roman Kuznetsov
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Roman Kuznetsov 2019-11-28 08:19:19 UTC
Description:
Skia: very light highlightning of selected icons on toolbar in Windows

Steps to Reproduce:
1. Enable Skia
2. Move mouse point to any icon on toolbar
3. Look at highlighting of icon (see screenshot in attach)

Actual Results:
bad highlighting of selected icon on toolbar

Expected Results:
normal highlighting of selected icon on toolbar


Reproducible: Always


User Profile Reset: No



Additional Info:
Версия: 6.5.0.0.alpha0+ (x64)
ID сборки: 89f0af144c18efafe2573801641689a1432c0cae
Потоков ЦП: 4; ОС:Windows 10.0 Build 18362; Отрисовка ИП: Skia/Raster; VCL: win; 
Локаль: ru-RU (ru_RU); Язык интерфейса: ru-RU
Calc: threaded
Comment 1 Roman Kuznetsov 2019-11-28 08:20:38 UTC
Created attachment 156164 [details]
Screenshot with comparison
Comment 2 Roman Kuznetsov 2019-12-11 16:25:16 UTC
https://gerrit.libreoffice.org/#/c/84948/
Comment 3 Commit Notification 2019-12-12 10:03:41 UTC
Luboš Luňák committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/e2c34ce3feac29e12ff47957eb8efcb6ad303709

make Skia Windows widget drawing use correct alpha (tdf#129074)

It will be available in 6.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Roman Kuznetsov 2019-12-15 18:05:28 UTC
verified in

Версия: 6.5.0.0.alpha0+ (x64)
ID сборки: e26d89371f0e4f41476c9a99be01d98dedb76776
Потоков ЦП: 4; ОС:Windows 10.0 Build 17763; Отрисовка ИП: Skia/Vulkan; VCL: win; 
Локаль: ru-RU (ru_RU); Язык интерфейса: ru-RU
Calc: threaded

thanks for fixing!