vcl/inc/win/salgdi.h
@@ -140,7 +140,7 @@ public:
     struct Texture;
 
     /// Obtain the texture in format for WinSalGraphicsImplBase::DrawTextMask().
-    virtual std::unique_ptr<Texture> getAsMaskTexture() { abort(); };
+    virtual std::unique_ptr<Texture> getAsMaskTexture() const { abort(); };
 
     /// Return true if text glyphs should be drawn as white instead of black.
     virtual bool wantsTextColorWhite() const { return false; }
